添加海量点点击的示例，以及Marker动画的示例，添加华为地图的示例module

--- a/sample-huawei/build.gradle
+++ b/sample-huawei/build.gradle
@@ -9,7 +9,7 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 def jksDir = keystorePropertiesFile.absolutePath.substring(0,keystorePropertiesFile.absolutePath.length() - "keystore.properties".length())
 
 android {
-    namespace 'com.melody.googlemap.myapplication'
+    namespace 'com.melody.petal.myapplication'
     compileSdk 33
 
     defaultConfig {
