--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ include ':sample-gaode'
 include ':gd-map-compose'
 include ':sample-baidu'
 include ':sample-tencent'
+include ':sample-huawei'
 include ':sample-google'
 include ':sample-ui-components'
 include ':sample-common'
