--- a/sample-gaode/src/main/AndroidManifest.xml
+++ b/sample-gaode/src/main/AndroidManifest.xml
@@ -82,6 +82,10 @@
 
         <activity android:name=".RoutePlanActivity" android:exported="false"/>
 
+        <activity android:name=".MultiPointOverlayActivity" android:exported="false"/>
+
+        <activity android:name=".MarkerAnimationActivity" android:exported="false"/>
+
     </application>
 
 </manifest>
