增加"3D楼块、地图文字"显示开关，添加运动轨迹的示例，Marker动画参数设置修改，更新gradle版本。

--- a/sample-gaode/src/main/AndroidManifest.xml
+++ b/sample-gaode/src/main/AndroidManifest.xml
@@ -86,6 +86,10 @@
 
         <activity android:name=".MarkerAnimationActivity" android:exported="false"/>
 
+        <activity android:name=".MovementTrackActivity" android:exported="false"/>
+
+        <activity android:name=".ClusterEffectActivity" android:exported="false"/>
+
     </application>
 
 </manifest>
