--- a/sample-tencent/build.gradle
+++ b/sample-tencent/build.gradle
@@ -15,6 +15,8 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 33
+        versionCode 1
+        versionName "1.0"
 
     }
 
@@ -68,5 +70,6 @@ android {
 dependencies {
     implementation project(path: ':sample-common')
     implementation project(path: ':sample-ui-components')
+    implementation project(path: ':tencent-map-compose')
 
 }
