--- a/sample-tencent/src/main/AndroidManifest.xml
+++ b/sample-tencent/src/main/AndroidManifest.xml
@@ -59,5 +59,7 @@
 
         <activity android:name=".LocationTrackingActivity" android:exported="false"/>
 
+        <activity android:name=".SmoothMoveActivity" android:exported="false"/>
+
     </application>
 </manifest>
