--- a/.github/workflows/sample-gaode.yml
+++ b/.github/workflows/sample-gaode.yml
@@ -1,19 +1,3 @@
-name: "Debug APK Publisher"
-branding:
-  icon: "package"
-  color: "red"
-description: "Build & Publish Debug APK on Github"
-author: "TheMelody"
-inputs:
-  GITHUB_TOKEN:
-    required: true
-    description: "Github secret token to allow automated publishing of APK to release."
-  REPO_BRANCH:
-    required: false
-    description: "Github repository branch name."
-runs:
-  using: "docker"
-  image: "Dockerfile"
 name: Build & Publish Debug APK
 
 on:
@@ -41,4 +25,4 @@ jobs:
       env:
        GITHUB_TOKEN: ${{ secrets.TOKEN }}
        APP_FOLDER: app
-       RELEASE_TITLE: New Build
+       RELEASE_TITLE: OmniMap-高德地图示例
