--- a/.github/workflows/sample-gaode.yml
+++ b/.github/workflows/sample-gaode.yml
@@ -7,10 +7,10 @@ on:
 
 jobs:
   Gradle:
+    name: Generate APK
     runs-on: ubuntu-latest
     steps:
-    - name: checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
     - name: setup jdk
       uses: actions/setup-java@v1
       with:
