--- a/sample-gaode/build.gradle
+++ b/sample-gaode/build.gradle
@@ -3,10 +3,10 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+def formattedDate = new Date().format('yyyyMMddHHmm')
 def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-
 def jksDir = keystorePropertiesFile.absolutePath.substring(0,keystorePropertiesFile.absolutePath.length() - "keystore.properties".length())
 
 android {
@@ -16,8 +16,8 @@ android {
         applicationId "com.melody.map.myapplication"
         minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 100
+        versionName "1.0.0"
 
         vectorDrawables {
             useSupportLibrary true
@@ -67,6 +67,12 @@ android {
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "${getName()}_${defaultConfig.versionName}_${formattedDate}-${variant.buildType.name}.apk"
         }
     }
 }
