处理github workflow执行的时候gradle去getName()变成了release了

--- a/sample-gaode/build.gradle
+++ b/sample-gaode/build.gradle
@@ -72,7 +72,7 @@ android {
 
     android.applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "${getName()}_${defaultConfig.versionName}_${formattedDate}-${variant.buildType.name}.apk"
+            outputFileName = "sample-gaode_${defaultConfig.versionName}_${formattedDate}-${variant.buildType.name}.apk"
         }
     }
 }
