--- a/sample-tencent/build.gradle
+++ b/sample-tencent/build.gradle
@@ -73,7 +73,7 @@ android {
 
     android.applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "${getName()}_${defaultConfig.versionName}_${formattedDate}-${variant.buildType.name}.apk"
+            outputFileName = "tencent_${defaultConfig.versionName}_${formattedDate}-${variant.buildType.name}.apk"
         }
     }
 }
