tag读取的ref字符串多写了一个github

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -43,4 +43,4 @@ jobs:
           token: ${{ secrets.github_token }}
           commit: master
           # tag名称和分支名称保持一致
-          tag: ${{ github.github.ref_name }}
+          tag: ${{ github.ref_name }}
