处理appendPoints为空的场景，增加腾讯地图的运动轨迹图绘制示例。

--- a/sample-tencent/src/main/AndroidManifest.xml
+++ b/sample-tencent/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:ignore="UnusedAttribute">
         <!--腾讯地图Api key-->
         <meta-data
             android:name="TencentMapSDK"
@@ -40,7 +40,6 @@
                 android:name="com.melody.tencentmap.myapplication.initializer.AppDataInitStartup"
                 android:value="androidx.startup" />
         </provider>
-
 
         <activity
             android:name=".MainActivity"
@@ -60,6 +59,8 @@
         <activity android:name=".LocationTrackingActivity" android:exported="false"/>
 
         <activity android:name=".SmoothMoveActivity" android:exported="false"/>
+
+        <activity android:name=".MovementTrackActivity" android:exported="false"/>
 
     </application>
 </manifest>
