增加播放运动轨迹结合的示例，类似:Keep的运动轨迹播放，增加线段动画和渐变色

--- a/sample-tencent/src/main/AndroidManifest.xml
+++ b/sample-tencent/src/main/AndroidManifest.xml
@@ -62,5 +62,7 @@
 
         <activity android:name=".MovementTrackActivity" android:exported="false"/>
 
+        <activity android:name=".MovementTrackActivity2" android:exported="false"/>
+
     </application>
 </manifest>
