--- a/sample-tencent/src/main/AndroidManifest.xml
+++ b/sample-tencent/src/main/AndroidManifest.xml
@@ -64,5 +64,7 @@
 
         <activity android:name=".MovementTrackActivity2" android:exported="false"/>
 
+        <activity android:name=".DragDropSelectPointActivity" android:exported="false"/>
+
     </application>
 </manifest>
