配置allowNativeHeapPointerTagging，处理android12+设备闪退问题

--- a/sample-baidu/src/main/AndroidManifest.xml
+++ b/sample-baidu/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.melody.bdmap.myapplication">
     <application
         android:icon="@mipmap/ic_launcher"
+        android:allowNativeHeapPointerTagging="false"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
