--- a/sample-gaode/src/main/AndroidManifest.xml
+++ b/sample-gaode/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
 
     <application
         android:allowBackup="true"
+        android:allowNativeHeapPointerTagging="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
