--- a/sample-huawei/src/main/AndroidManifest.xml
+++ b/sample-huawei/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:allowBackup="true"
+        android:allowNativeHeapPointerTagging="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:label="@string/app_name"
