更新高德地图示例相关动画初始化的地方调整。 腾讯地图示例增加，物流订单示例(模仿拼多多)，能显示多个InfoWindow，调整路径规划增加选中和未选中线段颜色更新。

--- a/sample-tencent/src/main/AndroidManifest.xml
+++ b/sample-tencent/src/main/AndroidManifest.xml
@@ -69,5 +69,7 @@
 
         <activity android:name=".RoutePlanActivity" android:exported="false"/>
 
+        <activity android:name=".LogisticsActivity" android:exported="false"/>
+
     </application>
 </manifest>
