--- a/gd-map-compose/build.gradle
+++ b/gd-map-compose/build.gradle
@@ -1,7 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id 'maven-publish'
+}
+
+afterEvaluate {
+    apply from: '../gradle/release/gaode_publish.gradle'
 }
 
 android {
@@ -15,12 +18,6 @@ android {
     }
     buildFeatures {
         compose true
-
-        // Disable unused AGP features
-        buildConfig false
-        aidl false
-        renderScript false
-        shaders false
     }
     buildTypes {
         release {
@@ -48,23 +45,4 @@ dependencies {
     api 'com.amap.api:3dmap:9.5.0'
     // 高德地图：搜索相关API
     api "com.amap.api:search:9.4.5"
-}
-
-// 生成的aar等产物： ./gradlew clean build publish
-afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                groupId 'io.github.TheMelody'
-                artifactId 'gd_compose'
-                version = '1.0.0'
-            }
-        }
-        repositories {
-            maven {
-                url "$buildDir/repo"
-            }
-        }
-    }
 }
