修改上传maven的工作流，修改library的build.gradle增加abortOnError false

--- a/.github/workflows/tencent_release.yml
+++ b/.github/workflows/tencent_release.yml
@@ -2,12 +2,13 @@ name: "Tencent Release"
 
 on:
   release:
-    types: [released]
+    # 通过工作流创建的只会触发：published，通过网页创建的会触发：released
+    types: [published]
 
 jobs:
   publish:
     name: "Tencent Release"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
         uses: actions/checkout@v3
