--- a/tencent-map-compose/build.gradle
+++ b/tencent-map-compose/build.gradle
@@ -36,12 +36,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    publishing {
-        singleVariant("release") {
-            // if you don't want sources/javadoc, remove these lines
-            withSourcesJar()
-            withJavadocJar()
-        }
+
+    lint {
+        abortOnError false
     }
 }
 
