调整为提交了tag，触发上传maven仓库

--- a/.github/workflows/gaode_release.yml
+++ b/.github/workflows/gaode_release.yml
@@ -1,9 +1,13 @@
 name: "GaoDe Release"
 
+#on:
+#  release:
+#    # 通过工作流创建的只会触发：published，通过网页创建的会触发：released
+#    types: [published,released]
 on:
-  release:
-    # 通过工作流创建的只会触发：published，通过网页创建的会触发：released
-    types: [edited,published,released]
+  push:
+    tags:
+      - 'v**'
 
 jobs:
   publish:
