更新tencent_release.yml和gaode_release.yml

--- a/.github/workflows/tencent_release.yml
+++ b/.github/workflows/tencent_release.yml
@@ -2,8 +2,9 @@ name: "Tencent Release"
 
 on:
   release:
-    # github-actions由机器人发起的 release 不会触发 GitHub Action！FUCK！！
-    types: [released]
+    # github-actions由机器人发起的 release 不会触发 GitHub Action！！！
+    # 只有自己手动，以自己名义 create release，才会触发
+    types: [published]
 
 jobs:
   publish:
