--- a/.github/workflows/tencent_release.yml
+++ b/.github/workflows/tencent_release.yml
@@ -1,14 +1,14 @@
-name: "Tencent Release"
+name: TX Release
 
 on:
   release:
     # github-actions由机器人发起的 release 不会触发 GitHub Action！！！
     # 只有自己手动，以自己名义 create release，才会触发
-    types: [published]
+    types: [released]
 
 jobs:
   publish:
-    name: "Tencent Release"
+    name: "Release"
     runs-on: ubuntu-latest
     steps:
       - name: "Checkout"
