--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ task clean(type: Delete) {
 nexusPublishing {
     repositories {
         sonatype {
-            nexusUrl.set(uri("https://s01.sonatype.org/service/local/staging/deploy/maven2/"))
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"))
             snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
             username = System.getenv("MAVEN_USERNAME")
             password = System.getenv("MAVEN_PASSWORD")
