--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ plugins {
     id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
 }
 
+group = "io.github.TheMelody"
+version = "1.0.0"
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
